[package]
name = "panel-prototype"
version = "0.3.0"
authors = ["Paul Kimpel <paul.kimpel@digm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
glium = { version = "0.25", default-features = true }
image = "0.22"
imgui = "0.2.1"
imgui-glium-renderer = { version = "0.2.0" }
imgui-winit-support = { version = "0.2.1" }