[package]
name = "proto-system"
version = "0.2.0"
authors = ["Paul Kimpel <paul.kimpel@digm.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pkimpel/retro-503/prototypes/proto-system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1", features=["full"]}
chrono = "0.4"
bincode = "1.2"
glium = { version = "0.26", default-features = true }
image = "0.23"
imgui = "0.3"
imgui-glium-renderer = "0.3"
imgui-winit-support = "0.3"
mio = "0.8.11"
