[package]
name = "simple-tokio"
version = "0.1.0"
authors = ["Paul Kimpel <paul.kimpel@digm.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pkimpel/retro-503/prototypes/proto-system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1", features=["full"]}
ctrlc = "3.1"
chrono = "0.4"
bincode = "1.2"
glium = { version = "0.29", default-features = true }
image = "0.23"
imgui = "0.6"
imgui-glium-renderer = "0.6"
imgui-winit-support = "0.6"
mio = "0.8.11"
